Fixed petal alignment within section

--- a/frontend_react/src/container/Hero/Hero.scss
+++ b/frontend_react/src/container/Hero/Hero.scss
@@ -19,7 +19,7 @@
   }
   &-gold {
     position: absolute;
-    padding-left: 25rem;
+    padding-left: 24rem;
   }
   &-pink {
     position: absolute;
